data/derived/sp14/progs/unify/prog1918.ml.out
Characters 57-58:
  else fixpoint (f, f b);;
                 ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
